Add recipe photo to Basic Mashed Potato recipe page
Created an images directory to organize all image resources.

--- a/recipes/basic-mashed-potatoes.html
+++ b/recipes/basic-mashed-potatoes.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Basic Mashed Potatoes Recipe</h1>
+    <img src="../images/basicmashedpotatophoto.jpg" alt="A bronze bowl of mashed potatoes with chunks of butter and shredded parsley" width="350px">
 </body>
 </html>
