--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/basic-mashed-potatoes.html">Basic Mashed Potatoes</a>
+        <ul>
+            <li><a href="./recipes/basic-mashed-potatoes.html">Basic Mashed Potatoes</a></li>
+            <li><a href="./recipes/cornbread-dressing.html">Cornbread Dressing</a></li>
+            <li><a href="./recipes/green-bean-casserole.html">Green Bean Casserole</a></li>
+        </ul>
     </body>
 </html>
