Clean up styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul id="recipe-list">
             <li><a href="./recipes/basic-mashed-potatoes.html">Basic Mashed Potatoes</a></li>
             <li><a href="./recipes/cornbread-dressing.html">Cornbread Dressing</a></li>
             <li><a href="./recipes/green-bean-casserole.html">Green Bean Casserole</a></li>
