--- a/recipes/cornbread-dressing.html
+++ b/recipes/cornbread-dressing.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cornbread Dressing Recipe</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <h1>Cornbread Dressing Recipe</h1>
     <img src="../images/cornbreaddressingphoto.jpg" alt="A baking pan of cornbread dressing with a wooden handle steel spoon in it" width="350px">
 
-    <h2>Description</h2>
+    <h2 id="desc">Description</h2>
     <p>Ready to make the best cornbread dressing of your life? You're in luck! This old-fashioned dressing recipe will quickly become a family favorite.</p>
     <p>Be careful not to bake the dressing too long, as this will dry it out. Bake it just until it's golden brown around the edges.</p>
 
