--- a/recipes/green-bean-casserole.html
+++ b/recipes/green-bean-casserole.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Bean Casserole Recipe</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <h1>Green Bean Casserole Recipe</h1>
     <img src="../images/greenbeancasserolephoto.jpg" alt="A green baking pan of green bean casserole with a steel spoon in a scooped out corner" width="350px">
 
-    <h2>Description</h2>
+    <h2 id="desc">Description</h2>
     <p>This green bean casserole is truly the best. Made with just four budget-friendly ingredients, you'll come back to this green bean casserole recipe year after year.</p>
     <p>You can bake this green bean casserole up to three days in advance. Cook it according to the recipe, but leave off the French-fried onions. Allow it cool, cover tightly with foil, and refrigerate until you're ready to eat.</p>
 
