--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul id="recipe-list">
-            <li><a href="./recipes/basic-mashed-potatoes.html">Basic Mashed Potatoes</a></li>
-            <li><a href="./recipes/cornbread-dressing.html">Cornbread Dressing</a></li>
-            <li><a href="./recipes/green-bean-casserole.html">Green Bean Casserole</a></li>
+            <li class="recipe-link"><a href="./recipes/basic-mashed-potatoes.html">Basic Mashed Potatoes</a></li>
+            <li class="recipe-link"><a href="./recipes/cornbread-dressing.html">Cornbread Dressing</a></li>
+            <li class="recipe-link"><a href="./recipes/green-bean-casserole.html">Green Bean Casserole</a></li>
         </ul>
     </body>
 </html>
