Change style of description paragraphs

--- a/recipes/cornbread-dressing.html
+++ b/recipes/cornbread-dressing.html
@@ -11,9 +11,12 @@
     <img src="../images/cornbreaddressingphoto.jpg" alt="A baking pan of cornbread dressing with a wooden handle steel spoon in it" width="350px">
 
     <h2 id="desc">Description</h2>
-    <p>Ready to make the best cornbread dressing of your life? You're in luck! This old-fashioned dressing recipe will quickly become a family favorite.</p>
-    <p>Be careful not to bake the dressing too long, as this will dry it out. Bake it just until it's golden brown around the edges.</p>
-
+    
+    <div class= "recipe-description">
+        <p>Ready to make the best cornbread dressing of your life? You're in luck! This old-fashioned dressing recipe will quickly become a family favorite.</p>
+        <p>Be careful not to bake the dressing too long, as this will dry it out. Bake it just until it's golden brown around the edges.</p>
+    </div>
+    
     <h2>Ingredients</h2>
     <ul>
         <li>3 cups crumbled cornbread</li>
