--- a/recipes/basic-mashed-potatoes.html
+++ b/recipes/basic-mashed-potatoes.html
@@ -11,9 +11,11 @@
     <img src="../images/basicmashedpotatophoto.jpg" alt="A bronze bowl of mashed potatoes with chunks of butter and shredded parsley" width="350px">
 
     <h2 id="desc">Description</h2>
-    <p>Looking for the best mashed potatoes recipe ever? You're in luck! This top-rated mashed potatoes recipe, made with just a few ingredients, produces crowd-pleasing results every time.</p>
-    <p>The best potatoes for mashing depends on your personal preference, as some varieties will give you fluffy results while others will give you creamy results.</p>
-    <p>This recipe calls for baking potatoes (a.k.a. russets), which are ideal for light and fluffy mashed potatoes. A good all-purpose potato, such as Yukon Gold, is also always a crowd-pleaser.</p>
+    <div class= "recipe-description">
+        <p>Looking for the best mashed potatoes recipe ever? You're in luck! This top-rated mashed potatoes recipe, made with just a few ingredients, produces crowd-pleasing results every time.</p>
+        <p>The best potatoes for mashing depends on your personal preference, as some varieties will give you fluffy results while others will give you creamy results.</p>
+        <p>This recipe calls for baking potatoes (a.k.a. russets), which are ideal for light and fluffy mashed potatoes. A good all-purpose potato, such as Yukon Gold, is also always a crowd-pleaser.</p>
+    </div>
 
     <h2>Ingredients</h2>
     <ul>
