Change ingredients and steps style in recipe pages
- Add 1px border to image
- Increase ingredients and steps font size
- Change other header colours
- Add second dividing section line
- Make little tweaks to accommodate changes

--- a/recipes/cornbread-dressing.html
+++ b/recipes/cornbread-dressing.html
@@ -27,11 +27,13 @@
             <li>2 large eggs, beaten</li>
             <li>2 cups chicken stock</li>
             <li>1 tablespoon dried sage, or more to taste</li>
-            <li>salt and ground black pepper to taste</li>
+            <li>Salt and ground black pepper to taste</li>
         </ul>
     </div>
 
-    <div class="steps"></div>
+    <div class="line"></div>
+
+    <div class="steps">
         <h2>Steps</h2>
         <ol>
             <li>Gather all ingredients. </li>
