--- a/recipes/basic-mashed-potatoes.html
+++ b/recipes/basic-mashed-potatoes.html
@@ -24,9 +24,11 @@
             <li>3 cloves garlic, peeled, or to taste (Optional)</li>
             <li>1 cup milk</li>
             <li>2 tablespoons butter</li>
-            <li>salt and ground black pepper to taste</li>
+            <li>Salt and ground black pepper to taste</li>
         </ul>
     </div>
+
+    <div class="line"></div>
 
     <div class="steps">
         <h2>Steps</h2>
